<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools, http://schemas.java.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#38C0FB"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.helloworld.GradeSeven" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/solvethis"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/mytw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="33dp"
        android:text="@string/mytw"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/skrivsvar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       
        android:layout_marginTop="146dp"
        android:ems="10"        
        android:hint="@string/skriv_svar" 
        android:textStyle="italic"
        >

        
    </EditText>

    <Button
        android:id="@+id/buttonsvar"
        android:layout_width="95dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/skrivsvar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/svar" 
        android:onClick="ButtonClick"
        />

</RelativeLayout>