
<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#38C0FB"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" 
    tools:context="com.example.helloworld.ChooseLevelGradeOne" >
   
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/choose_level"
        android:textSize="26sp" 
        android:textAppearance="?android:attr/textAppearanceLarge"/>
        
        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="33dp"
            android:background="#E668E3"
            android:text="@string/level_one" />

        <Button
            android:id="@+id/button10"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button8"
            android:layout_below="@+id/button8"
            android:layout_marginTop="124dp"
            android:background="#610075"
            android:textColor="#DBF7FF"
            android:text="@string/level_three" />

        <Button
            android:id="@+id/button9"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/button8"
            android:layout_below="@+id/button8"
            android:layout_marginTop="36dp"
            android:background="#BB26CE"
            android:text="@string/level_two" />
    
    </RelativeLayout>